[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "douyin-style-profiler"
version = "0.1.0"
description = "Benchmark Douyin profile style analyzer"
requires-python = ">=3.10"
dependencies = [
  "playwright>=1.45.0",
  "aiohttp>=3.9.0",
  "requests>=2.31.0",
  "PyYAML>=6.0.0",
]

[project.optional-dependencies]
transcribe = [
  "funasr>=1.2.6",
  "modelscope>=1.17.0",
  "opencc-python-reimplemented>=0.1.7",
]

[project.scripts]
douyin-style-profiler = "douyin_style_profiler.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
